--- a/css/custom.css
+++ b/css/custom.css
@@ -48,7 +48,7 @@ header h1 {
     margin: 0;
 }
 
-#contenido {
+#content {
     margin-top: 60px;
     background-color: white;
     -webkit-box-shadow: 0px 21px 46px -15px rgba(0, 0, 0, 1);
@@ -56,7 +56,7 @@ header h1 {
     box-shadow: 0px 21px 46px -15px rgba(0, 0, 0, 1);
 }
 
-.contenido-formulario {
+.form-content {
     margin-top: 30px;
 }
 
